Included newest changes from feature/approximations.